# MIROFish

./: .env.example  .gitignore  Dockerfile.render  README-EN.md  README.md  docker-compose.yml  package.json  railway.json  render.yaml
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/models/: project.py  task.py
backend/app/services/: disambiguation_eval_service.py  graph_builder.py  graph_quality.py  oasis_profile_generator.py  ontology_generator.py  quality_metrics_service.py  report_agent.py  simulation_config_generator.py  simulation_manager.py  simulation_runner.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: llm_client.py  token_usage_service.py  zep_client.py
backend/demo_uploads/graphs/: _index.json  mirofish_1201c53579844b44.json  mirofish_22e61e055a664ece.json  mirofish_272a8500795d47dc.json  mirofish_2ca888baa60448d7.json  mirofish_317bbdffe4ad4fdb.json  mirofish_3e3a0d98e29e41e6.json  mirofish_41281db6e06645ce.json  mirofish_479d0ab836aa4157.json  mirofish_4ad54da1a8e3481d.json  mirofish_50e8eda2ef624af2.json  mirofish_53413c45a48c43f8.json  mirofish_66bd2c874ba44d30.json  mirofish_6c1932b3a915493f.json  mirofish_6c504b8a44ec4fdc.json  mirofish_6c93f169fdb54d5e.json  mirofish_89fb8b0789ab4907.json  mirofish_8bd136ea45f14b6a.json  mirofish_95cd20a42c5d4f79.json  (+10 more)
backend/scripts/: export_graphs_to_json.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
(+324 files in other folders)
