[project]
name = "mirofish-backend"
version = "0.1.0"
description = "MiroFish Backend"
requires-python = ">=3.11"

dependencies = [
    "flask",
    "flask-cors",
    "openai",
    "PyMuPDF",
    "charset-normalizer",
    "chardet"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
